# boomerang-experiments

./: .gitignore  CMakeLists.txt  Makefile.in  bfd.lib  boomerang.cpp  boomerang.sln  boomerang.vcproj  configure  configure.in  dbl_shared.cpp  driver.cpp  functest.sh  log.cpp  resource.h  testAll.cpp  testOne.sh  windows.cpp
analysis/: AnalysisTest.cpp  AnalysisTest.h  analysis.cpp  testAnalysis.cpp
c/: CTest.cpp  CTest.h  ansi-c-parser.cpp  ansi-c-parser.h  ansi-c-scanner.cpp  ansi-c-scanner.h  ansi-c.l  ansi-c.y
codegen/: CMakeLists.txt  chllcode.cpp  chllcode.h  syntax.cpp
db/: CMakeLists.txt  CfgTest.cpp  CfgTest.h  DataflowTest.cpp  DataflowTest.h  DfaTest.cpp  DfaTest.h  ExpTest.cpp  ExpTest.h  ParserTest.cpp  ParserTest.h  ProcTest.cpp  ProcTest.h  ProgTest.cpp  ProgTest.h  RtlTest.cpp  RtlTest.h  StatementTest.cpp  StatementTest.h  TypeTest.cpp  TypeTest.h  basicblock.cpp  cfg.cpp  checkstrings.cpp  dataflow.cpp  exp.cpp  hrtl.cpp  insnameelem.cpp  insnameelem.h  managed.cpp  operstrings.h  proc.cpp  prog.cpp  project.cpp  register.cpp  rtl.cpp  section_info.cpp  signature.cpp  signatureStubs.cpp  sslinst.cpp  (+16 more)
frontend/: FrontPentTest.cpp  FrontPentTest.h  FrontSparcTest.cpp  FrontSparcTest.h  FrontendTest.cpp  FrontendTest.h  frontend.cpp  njmcDecoder.cpp  pentiumdecoder.cpp  pentiumdecoder.h  pentiumfrontend.cpp  pentiumfrontend.h  ppcdecoder.cpp  ppcdecoder.h  ppcfrontend.cpp  ppcfrontend.h  sparcdecoder.cpp  sparcdecoder.h  sparcfrontend.cpp  sparcfrontend.h  st20decoder.cpp  st20decoder.h  st20frontend.cpp  st20frontend.h  switch.cpp  testFront.cpp
frontend/machine/hppa/: fronthppa.cpp
frontend/machine/mc68k/: front68k.cpp
frontend/machine/pentium/: 386.pat.cpp  386.pat.h  decoder.m  (+2 more)
gui/: Plugin.cpp  Plugin.h  Preferences.cpp  Preferences.h  Project.cpp  Project.h  boomerang.cpp  boomerang.h  resource.h  stdincs.h
gui/TestPlugin/: TestPlugin.cpp  TestPlugin.h
include/: BinaryFile.h  BinaryFileStub.h  SymbolMatcher.h  analysis.h  basicblock.h  boomerang.h  cfg.h  cluster.h  constraint.h  coverage.h  dataflow.h  decoder.h  exp.h  exphelp.h  frontend.h  hllcode.h  log.h  managed.h  memo.h  operator.h  proc.h  prog.h  register.h  rtl.h  sigenum.h  signature.h  statement.h  transformer.h  type.h  types.h  visitor.h  xmlprogparser.h
include/db/: project.h  section_info.h
loader/: ArchiveFile.cpp  BinaryFile.cpp  BinaryFileFactory.cpp  BinaryFileStub.cpp  CMakeLists.txt  DOS4GWBinaryFile.cpp  DOS4GWBinaryFile.h  ElfArchiveFile.cpp  ElfBinaryFile.cpp  ElfBinaryFile.h  ElfDetails.cpp  ExeBinaryFile.cpp  ExeBinaryFile.h  HpSomBinaryFile.cpp  HpSomBinaryFile.h  IntelCoffFile.cpp  IntelCoffFile.h  LoaderTest.cpp  LoaderTest.h  MachOBinaryFile.cpp  MachOBinaryFile.h  Makefile.in  PalmBinaryFile.cpp  PalmBinaryFile.h  SymTab.cpp  SymTab.h  Win32BinaryFile.cpp  Win32BinaryFile.h  bffDump.cpp  macho-apple.h  microX86dis.c  nlist.h  palmsystraps.h  syself.h
loader/exe_loader/: CMakeLists.txt  ExeBinaryFile.cpp  ExeBinaryFile.h  plugin_base.cpp  plugin_base.h
loader/objc/: List.h  Protocol.h  error.h  hashtable2.h  malloc.h  objc-class.h  objc-runtime.h  objc.h
mfcgui/: CFGViewDialog.cpp  CFGViewDialog.h  ChildFrm.cpp  ChildFrm.h  EditBBDialog.cpp  EditBBDialog.h  MainFrm.cpp  MainFrm.h  NewProjectDialog.cpp  NewProjectDialog.h  NewSymbolDialog.cpp  NewSymbolDialog.h  ProcDoc.cpp  ProcDoc.h  ProcPropertiesDialog.cpp  ProcPropertiesDialog.h  ProcView.cpp  ProcView.h  ProceduresDialog.cpp  ProceduresDialog.h  RenameVariableDialog.cpp  RenameVariableDialog.h  SaveLoadDialog.cpp  SaveLoadDialog.h  SymbolsDialog.cpp  SymbolsDialog.h  ViewDecodeDialog.cpp  ViewDecodeDialog.h  mfcgui.cpp  mfcgui.h  resource.h
platform/: CMakeLists.txt  boomerang.cpp  log.cpp
platform/db/: CMakeLists.txt  basicblock.cpp  cfg.cpp  dataflow.cpp  exp.cpp  insnameelem.cpp  managed.cpp  operstrings.h  proc.cpp  prog.cpp  project.cpp  register.cpp  rtl.cpp  section_info.cpp  signature.cpp  sslinst.cpp  sslparser.cpp  sslparser.h  sslscanner.cpp  sslscanner.h  statement.cpp  visitor.cpp  xmlprogparser.cpp
platform/db/tests/: CfgTest.cpp  CfgTest.h  DfaTest.cpp  DfaTest.h  ExpTest.cpp  ExpTest.h  ParserTest.cpp  ParserTest.h  ProcTest.cpp  ProcTest.h  ProgTest.cpp  ProgTest.h  RtlTest.cpp  RtlTest.h  StatementTest.cpp  StatementTest.h  typeStubs.cpp  utilStubs.cpp
platform/plugin_framework/: CMakeLists.txt  DynamicLibrary.cpp  PluginManager.cpp  base.cpp
platform/services/: common.cpp  dispatcher.h  loader.cpp
plugin_framework/: CMakeLists.txt  PluginHelper.h  PluginManager.cpp  PluginManager.h  StreamingException.h  base.cpp
plugin_interfaces/: loader_services.h
qtgui/: detailswidget.cpp  filemonitor.cpp  filemonitor.h  main.cpp  mainform.cpp  mainform.h
signatures/: mfc.h  netdb.h  ntddk.h  pwd.h  socket.h  stat_pent.h  string.h  termios.h  time.h  unistd.h  utmp.h  windows.h  xf86.h
symbols/: BfdArchMatcher.cpp  BfdArchMatcher.h  BfdObjMatcher.cpp  BfdObjMatcher.h  BytePattern.cpp  BytePattern.h  DynLibMatcher.cpp  DynLibMatcher.h  LibSigMatcher.cpp  LibSigMatcher.h  SignatureGenerator.h  SymbolMatcher.cpp  libidloader.cpp  libidloader.h
test/pentium/: mutual_recurse  testset  testset.s  twoproc
test/source/: andn.c  banner.c  condcodexform.c  daysofxmas.c  elf_hash_original.c  fibo2.c  frontier.c  funcptr.c  hello.c  line1.c  manyparams.c  minmax2.c  mutual_recurse.c  nestedswitch.c  param1.c  recursion.c  recursion2.c  semi.c  stattest.c  switch.c  testarray1.c  testarray2.c  testset.out  twofib.c  twoproc.c  twoproc3.c
test/sparc/: twoproc
testsuite/: testAll.cpp
transform/: CMakeLists.txt  generic.cpp  rdi.cpp  rdi.h  transformation-parser.cpp  transformation-parser.h  transformation-scanner.cpp  transformation-scanner.h  transformer.cpp
type/: CMakeLists.txt  TypeTest.cpp  TypeTest.h  constraint.cpp  dfa.cpp  type.cpp
ui/: CMakeLists.txt
ui/cli/: CMakeLists.txt  driver.cpp
util/: UtilTest.cpp  UtilTest.h  util.cpp
win32make/console/: console.vcproj
win32make/include/: expat.h  expat_external.h  gc.h
win32make/libid/: libid.vcproj
(+20 files in other folders)
